<resources>
    <string name="app_name">York Theatre</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="filter_performances">Filter performances</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="date">Date</string>
    <string name="accessibility">Accessibility (Optional)</string>
    <string name="dateInput">Enter date (dd/MM/yyyy) (Optional)</string>
    <string name="no_performances">No Performances Found</string>
    <string name="book_now">Book Now</string>
    <string name="confirmation">See Confirmation</string>
    <string name="cancel">Cancel booking</string>
    <string name="quantity_prompt">Select Quantity</string>
    <string name="total">Total Price</string>
</resources>